# 40kdc-data

./: .gitignore  11e-migration.md  CLAUDE.md  CONFORMANCE.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  todo.md
.claude/: settings.json
.github/workflows/: deploy.yml  pages.yml  publish.yml  validate.yml
conformance/: RUNNER_PROTOCOL.md  normalize.json
conformance/applies-to/: cases.json
conformance/compare/: 01-forgefiend-hades-vs-meq-15.json  02-forgefiend-hades-vs-geq-15.json  03-forgefiend-ectoplasma-vs-questoris-15.json  04-forgefiend-hades-vs-ctan-24.json  05-forgefiend-hades-vs-geq-48-out-of-range.json  06-forgefiend-jaws-vs-meq-fight.json
conformance/effect-translation/: cases.json
conformance/linked-api/: cases.json
conformance/loadout/: 01-ff-2hades-vs-meq.json  02-ff-2hades-vs-guard.json  03-ff-2ecto-vs-rhino.json  04-defiler-las-vs-rhino.json  05-mixed-out-of-range.json
conformance/scoring/: cases.json
conformance/scoring-translation/: cases.json
conformance/weapon-keywords/: cases.json
crates/wh40kdc/: Cargo.toml  README.md
crates/wh40kdc/schemas/: bundled.schema.json
crates/wh40kdc/src/: generated.rs  lib.rs  scope.rs
crates/wh40kdc/src/data/: collection.rs  dataset.rs  mod.rs  normalize.rs
crates/wh40kdc/src/import/: adapter.rs  decode.rs  gw_headerless.rs  listforge.rs  mod.rs  resolve.rs  roster_json.rs  types.rs
crates/wh40kdc/src/translate/: effect.rs  mod.rs
crates/wh40kdc/tests/: applies_to_conformance.rs  conformance.rs  data_api.rs  deserialize_real_data.rs  import.rs  import_ip_safety.rs  try_import_roster.rs
data/_audit/: blessings-of-khorne-three-way.md  coverage.json  phrasing.csv  phrasing.json  seed-unresolved.json  store-coverage.md  summary.md  worklist.md
data/core/: mission-matchups.json  missions.json  secondary-cards.json  (+6 more)
docs-site/: index.html
go/: dataset.go  spec.go  translate_condition.go  version.go
scripts/: build-publish.mjs
tools/: README.md  package-lock.json  package.json  tsconfig.json  typedoc.html.json  typedoc.json
xtask/: Cargo.toml
(+534 files in other folders)
