[workspace]
resolver = "2"
members = ["crates/wh40kdc", "xtask"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Tabletop-Developer-Consortium/40kdc-data"
homepage = "https://tabletop-developer-consortium.github.io"
rust-version = "1.75"
authors = ["Tabletop Developer Consortium"]
